--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -3,6 +3,8 @@
   margin: auto;
   padding-bottom: 36px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
