--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@
 /*  header  */
 
 @import url(./blocks/header/header.css);
+@import url(./blocks/header/__container/header__container.css);
+@import url(./blocks/header/__link/heder__link.css);
+@import url(./blocks/header/__link/_active/header__link_active.css);
+@import url(./blocks/header/__container/header__container.css);
 
 /*  form  */
 
@@ -33,6 +37,9 @@
 @import url(./blocks/form/__button/_disabled/form__button_disabled.css);
 @import url(./blocks/form/__inpur-error/form__input-error.css);
 @import url(./blocks/form/__inpur-error/_active/form__input-error_active.css);
+@import url(./blocks/form/form_registr/form_registr.css);
+@import url(./blocks/form/__input/_type/_registr/form__input_type_registr.css);
+@import url(./blocks/form/__button/_register/form__button_register.css);
 
 /*  profile  */
 
@@ -76,6 +83,7 @@
 @import url(./blocks/popup/__close/popup__close.css);
 @import url(./blocks/popup/__title/popup__title.css);
 @import url(./blocks/popup/__show-image/popup__show-image.css);
+@import url(./blocks/popup/__title/_type/_info-tooltip/popup__title_type_info-tooltip.css);
 
 
 /*   show-image  */
@@ -83,3 +91,12 @@
 @import url(./blocks/show-image/show-image.css);
 @import url(./blocks/show-image/__image/show-image__image.css);
 @import url(./blocks/show-image/__title/show-image__title.css);
+
+
+/*   login-signup  */
+
+@import url(./blocks/login-signup/login-signup.css);
+@import url(./blocks/login-signup/__container/login-signup__container.css);
+@import url(./blocks/login-signup/__title/login-signup__title.css);
+
+@import url(./blocks/info-tooltip/__image/info-tooltip__image.css);
